Fix light bar on left in dark mode. #31

--- a/src/dark.styl
+++ b/src/dark.styl
@@ -27,6 +27,8 @@
 \******************************************************************************/
 
 html .dark
+  background #222
+
   input, select
     color #fff
     background-color #444
